# Cadence

./: .gitignore  Cadence.code-workspace  Dockerfile  configuration.example.json  docker-compose.yml  main.py  pyproject.toml
cogs/: errorHandler.py  meta.py  music.py
utils/: checks.py  embed.py  help.py  queue.py  track.py  view.py
