[tool.poetry]
name = "cadence-bot"
version = "1.0.0"
description = "A Discord music bot using py-cord, youtube-dl, and ffmpeg."
authors = ["Sam <akamitsunami@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = "^2.4.0"
aiohttp = "^3.8.0"
pynacl = "^1.5.0"
yt-dlp = "^2023.6.22"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
